// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserList /> Should render and match the snapshot - admin 1`] = `
<div>
  <div
    class="Box-sc-1vhutan-0 bOwlot"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="Box-sc-1vhutan-0 cDJCJC"
      width="100%"
    >
      <div
        class="Box-sc-1vhutan-0 erkpdS"
        display="flex"
      >
        <h1
          class="H1-sc-1k7m23t-0 hNcBIZ"
        >
          Manage accounts
        </h1>
        <button
          class="StyledTextButton-sc-1b7egxw-0 hXDmcc"
          color="#B727EA"
          font-weight="bold"
        >
          + Invite researcher
        </button>
      </div>
      <div>
        <div
          style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; margin-bottom: 40px; padding: 0px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 iqNDFB"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 gZjjZA"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 kdPfXJ"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Team Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 hDkbeS"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Third Party
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 gGlmVX"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      E-Intervention Admin
                    </p>
                  </div>
                </div>
                <div
                  class="Box-sc-1vhutan-0 kNvWbw"
                  width="25"
                />
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 33.333333333333336%; flex-basis: 33.333333333333336%; flex-grow: 0; flex-shrink: 0; max-width: 33.333333333333336%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 cVwTmA"
                    cursor="pointer"
                    display="inline-flex"
                  >
                    <img
                      src="IMAGE_MOCK"
                    />
                    Show inactive accounts
                  </div>
                </div>
              </div>
            </div>
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
            >
              <div
                class="styled__SearchInputStyled-sc-10udg63-3 gFHxDg"
              >
                <input
                  aria-label="Filter users by name"
                  class="Input-t9j2q5-0 hjYQaq"
                  placeholder="Filter users by name"
                  type="text"
                  value=""
                />
                <img
                  alt="search"
                  class="styled__SearchIcon-sc-10udg63-4 VQGbD"
                  src="IMAGE_MOCK"
                />
                
              </div>
            </div>
          </div>
          <span
            style="display: table; clear: both;"
          />
        </div>
        <div
          class="styled__TableLoadingContainer-skadoa-0 hSHnNK"
        >
          <table
            class="Table-sc-1y0iqmn-0 hyqcGV"
            width="100%"
          >
            <thead
              class="THead-sc-8drp5d-0"
            >
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF jDsXAl"
              >
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Name
                  </div>
                </th>
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Email
                  </div>
                </th>
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Role
                  </div>
                </th>
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Activate/Deactivate
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="TBody-gqq9cv-0"
            >
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF hbklzy"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <p
                    class="Text-e4p0w3-0 eFoKic"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  test@test.pl
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Box-sc-1vhutan-0 bUeKCS"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Row-y1cs0u-0 ggPJew"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-1b7egxw-0 itdyYG"
                    >
                      <p
                        class="Text-e4p0w3-0 gYitek"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF hbklzy"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <p
                    class="Text-e4p0w3-0 eFoKic"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  test2@test.pl
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Box-sc-1vhutan-0 jSbkvP"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Row-y1cs0u-0 ggPJew"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-1b7egxw-0 itdyYG"
                    >
                      <p
                        class="Text-e4p0w3-0 gYitek"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF hbklzy"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <p
                    class="Text-e4p0w3-0 eFoKic"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  test3@test.pl
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Box-sc-1vhutan-0 iwPbyv"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Admin
                    </p>
                  </div>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Row-y1cs0u-0 ggPJew"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-1b7egxw-0 itdyYG"
                    >
                      <p
                        class="Text-e4p0w3-0 gYitek"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-label="Data list pagination"
          class="Row-y1cs0u-0 cAHLWQ"
          display="flex"
          role="navigation"
          width="100%"
        >
          <div
            aria-label="Go to page: 1"
            aria-selected="true"
            class="Box-sc-1vhutan-0 jvUOui"
            cursor="pointer"
            display="flex"
          >
            <p
              class="Text-e4p0w3-0 eRNSEk"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            aria-label="Go to next page"
            class="H1-sc-1k7m23t-0 fRhEzm"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserList /> Should render and match the snapshot - researcher 1`] = `
<div>
  <div
    class="Box-sc-1vhutan-0 bOwlot"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="Box-sc-1vhutan-0 cDJCJC"
      width="100%"
    >
      <div
        class="Box-sc-1vhutan-0 erkpdS"
        display="flex"
      >
        <h1
          class="H1-sc-1k7m23t-0 hNcBIZ"
        >
          Manage accounts
        </h1>
      </div>
      <div>
        <div
          style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; margin-bottom: 40px; padding: 0px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 iqNDFB"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 gZjjZA"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 kdPfXJ"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Team Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 hDkbeS"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Third Party
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 gGlmVX"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      E-Intervention Admin
                    </p>
                  </div>
                </div>
                <div
                  class="Box-sc-1vhutan-0 kNvWbw"
                  width="25"
                />
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 33.333333333333336%; flex-basis: 33.333333333333336%; flex-grow: 0; flex-shrink: 0; max-width: 33.333333333333336%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="Box-sc-1vhutan-0 cVwTmA"
                    cursor="pointer"
                    display="inline-flex"
                  >
                    <img
                      src="IMAGE_MOCK"
                    />
                    Show inactive accounts
                  </div>
                </div>
              </div>
            </div>
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
            >
              <div
                class="styled__SearchInputStyled-sc-10udg63-3 gFHxDg"
              >
                <input
                  aria-label="Filter users by name"
                  class="Input-t9j2q5-0 hjYQaq"
                  placeholder="Filter users by name"
                  type="text"
                  value=""
                />
                <img
                  alt="search"
                  class="styled__SearchIcon-sc-10udg63-4 VQGbD"
                  src="IMAGE_MOCK"
                />
                
              </div>
            </div>
          </div>
          <span
            style="display: table; clear: both;"
          />
        </div>
        <div
          class="styled__TableLoadingContainer-skadoa-0 hSHnNK"
        >
          <table
            class="Table-sc-1y0iqmn-0 hyqcGV"
            width="100%"
          >
            <thead
              class="THead-sc-8drp5d-0"
            >
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF jDsXAl"
              >
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Name
                  </div>
                </th>
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Email
                  </div>
                </th>
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Role
                  </div>
                </th>
                <th
                  class="TH-sc-1w7ae0i-0 dcMBuC"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-4zswzq-0 gzLnhc"
                  >
                    Activate/Deactivate
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="TBody-gqq9cv-0"
            >
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF hbklzy"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <p
                    class="Text-e4p0w3-0 eFoKic"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  test@test.pl
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Box-sc-1vhutan-0 bUeKCS"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Row-y1cs0u-0 ggPJew"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-1b7egxw-0 itdyYG"
                    >
                      <p
                        class="Text-e4p0w3-0 gYitek"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF hbklzy"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <p
                    class="Text-e4p0w3-0 eFoKic"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  test2@test.pl
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Box-sc-1vhutan-0 jSbkvP"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Row-y1cs0u-0 ggPJew"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-1b7egxw-0 itdyYG"
                    >
                      <p
                        class="Text-e4p0w3-0 gYitek"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-sc-1omngt7-0 StripedTR-sc-1wcdkgr-0 iNrQaF hbklzy"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <p
                    class="Text-e4p0w3-0 eFoKic"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  test3@test.pl
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Box-sc-1vhutan-0 iwPbyv"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="Text-e4p0w3-0 eAccFX"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Admin
                    </p>
                  </div>
                </td>
                <td
                  class="TD-y7762g-0 cXNZQh"
                >
                  <div
                    class="Row-y1cs0u-0 ggPJew"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-1b7egxw-0 itdyYG"
                    >
                      <p
                        class="Text-e4p0w3-0 gYitek"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-label="Data list pagination"
          class="Row-y1cs0u-0 cAHLWQ"
          display="flex"
          role="navigation"
          width="100%"
        >
          <div
            aria-label="Go to page: 1"
            aria-selected="true"
            class="Box-sc-1vhutan-0 jvUOui"
            cursor="pointer"
            display="flex"
          >
            <p
              class="Text-e4p0w3-0 eRNSEk"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            aria-label="Go to next page"
            class="H1-sc-1k7m23t-0 fRhEzm"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;
